--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "assets/vendor"
   ],
   "dependencies": {
-    "modernizr": "2.8.2",
+    "jquery": "1.11.1",
     "bourbon": "~4.2.0",
     "neat": "~1.7.1",
     "normalize-scss": "latest"
@@ -21,6 +21,9 @@
   "overrides": {
     "modernizr": {
       "main": "./modernizr.js"
+    },
+    "jquery": {
+      "ignore": true
     }
   }
 }
