--- a/package.json
+++ b/package.json
@@ -29,24 +29,28 @@
   "devDependencies": {
     "browser-sync": "2.7.13",
     "gulp": "^3.9.0",
-    "gulp-load-plugins": "1.1.0",
-    "gulp-imagemin": "2.4.0",
-    "imagemin-pngcrush": "4.1.0",
-    "gulp-plumber": "1.0.1",
-    "gulp-sass": "2.1.0",
-    "gulp-sourcemaps": "1.6.0",
     "gulp-autoprefixer": "3.1.0",
-    "gulp-minify-css": "1.2.2",
-    "gulp-jshint": "2.0.0",
-    "jshint": "2.8.0",
-    "jshint-stylish": "2.1.0",
     "gulp-concat": "2.6.0",
-    "gulp-uglify": "1.5.1",
-    "gulp-rename": "1.2.2",
-    "yargs": "3.31.0",
     "gulp-html-replace": "1.5.5",
     "gulp-if": "2.0.0",
+    "gulp-imagemin": "2.4.0",
+    "gulp-jshint": "2.0.0",
+    "gulp-load-plugins": "1.1.0",
+    "gulp-minify-css": "1.2.2",
+    "gulp-modernizr": "0.0.0",
+    "gulp-plumber": "1.0.1",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "2.1.0",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-uglify": "1.5.1",
+    "gulp-util": "3.0.7",
+    "imagemin-pngcrush": "4.1.0",
+    "jshint": "2.8.0",
+    "jshint-stylish-source": "1.0.5",
     "main-bower-files": "2.9.0",
-    "gulp-util": "3.0.7"
+    "yargs": "3.31.0"
+  },
+  "dependencies": {
+    "npm": "^3.5.2"
   }
 }
