--- a/package.json
+++ b/package.json
@@ -27,28 +27,27 @@
     "postinstall": "bower install && gulp build"
   },
   "devDependencies": {
-    "browser-sync": "2.7.13",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "3.1.0",
-    "gulp-concat": "2.6.0",
-    "gulp-html-replace": "1.5.5",
-    "gulp-if": "2.0.0",
-    "gulp-imagemin": "2.4.0",
-    "gulp-jshint": "2.0.0",
     "gulp-load-plugins": "1.1.0",
+    "yargs": "3.31.0",
+    "gulp-html-replace": "1.5.5",
+    "gulp-rename": "1.2.2",
+    "gulp-if": "2.0.0",
+    "gulp-plumber": "1.0.1",
     "gulp-minify-css": "1.2.2",
     "gulp-modernizr": "0.0.0",
-    "gulp-plumber": "1.0.1",
-    "gulp-rename": "1.2.2",
     "gulp-sass": "2.1.0",
     "gulp-sourcemaps": "1.6.0",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-concat": "2.6.0",
     "gulp-uglify": "1.5.1",
-    "gulp-util": "3.0.7",
+    "gulp-imagemin": "2.4.0",
     "imagemin-pngcrush": "4.1.0",
     "jshint": "2.8.0",
     "jshint-stylish-source": "1.0.5",
+    "gulp-jshint": "2.0.0",
     "main-bower-files": "2.9.0",
-    "yargs": "3.31.0"
+    "browser-sync": "2.7.13"
   },
   "dependencies": {
     "npm": "^3.5.2"
