--- a/package.json
+++ b/package.json
@@ -24,30 +24,33 @@
     "npm": ">=2.1.5"
   },
   "scripts": {
-    "postinstall": "bower install && gulp build"
+    "postinstall": "gulp build"
   },
   "devDependencies": {
+    "bourbon": "^4.2.6",
+    "bourbon-neat": "^1.7.4",
+    "browser-sync": "2.12.4",
     "gulp": "^3.9.0",
-    "gulp-load-plugins": "1.1.0",
-    "yargs": "3.31.0",
-    "gulp-html-replace": "1.5.5",
-    "gulp-rename": "1.2.2",
-    "gulp-if": "2.0.0",
-    "gulp-plumber": "1.0.1",
-    "gulp-minify-css": "1.2.2",
-    "gulp-modernizr": "0.0.0",
-    "gulp-sass": "2.1.0",
-    "gulp-sourcemaps": "1.6.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-concat": "2.6.0",
-    "gulp-uglify": "1.5.1",
+    "gulp-html-replace": "1.5.5",
+    "gulp-if": "2.0.0",
     "gulp-imagemin": "2.4.0",
-    "imagemin-pngcrush": "4.1.0",
-    "jshint": "2.8.0",
-    "jshint-stylish-source": "1.0.5",
     "gulp-jshint": "2.0.0",
-    "main-bower-files": "2.9.0",
-    "browser-sync": "2.7.13"
+    "gulp-load-plugins": "1.2.2",
+    "gulp-minify-css": "1.2.4",
+    "gulp-plumber": "1.1.0",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "2.3.1",
+    "gulp-sourcemaps": "2.0.0-alpha",
+    "gulp-uglify": "1.5.3",
+    "imagemin-pngcrush": "4.1.0",
+    "jquery": "^2.2.3",
+    "jshint": "2.9.2",
+    "jshint-stylish-source": "1.0.5",
+    "main-bower-files": "2.11.1",
+    "sanitize.css": "^3.3.0",
+    "yargs": "4.6.0"
   },
   "dependencies": {
     "npm": "^3.5.2"
