--- a/package.json
+++ b/package.json
@@ -1,58 +1,69 @@
 {
-  "name": "SGF",
-  "version": "0.0.1",
-  "description": "Simple Gulp File",
-  "authors": [
-    "Shaun Baer <shaun.baer@gmail.com>"
-  ],
-  "homepage": "http://github.com/iamhexcoder",
+  "name": "mercury",
+  "version": "1.1.0",
+  "description": "Simple HTML Boilerplate with Gulp & Browserify",
+  "main": "gulpfile.js",
+  "scripts": {
+    "postinstall": "gulp "
+  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/j2made/apollo.git"
+    "url": "https://github.com/j2made/mercury.git"
   },
+  "author": "",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/j2made/apollo/issues"
+    "url": "https://github.com/j2made/mercury/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://opensource.org/licenses/MIT"
-    }
-  ],
-  "engines": {
-    "node": ">= 0.10.0",
-    "npm": ">=2.1.5"
-  },
-  "scripts": {
-    "postinstall": "gulp build"
-  },
+  "homepage": "https://github.com/j2made/mercury#readme",
   "devDependencies": {
+    "babelify": "^7.2.0",
     "bourbon": "^4.2.6",
     "bourbon-neat": "^1.7.4",
-    "browser-sync": "2.12.4",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "3.1.0",
-    "gulp-concat": "2.6.0",
-    "gulp-html-replace": "1.5.5",
-    "gulp-if": "2.0.0",
-    "gulp-imagemin": "2.4.0",
-    "gulp-jshint": "2.0.0",
-    "gulp-load-plugins": "1.2.2",
-    "gulp-minify-css": "1.2.4",
-    "gulp-plumber": "1.1.0",
-    "gulp-rename": "1.2.2",
-    "gulp-sass": "2.3.1",
-    "gulp-sourcemaps": "2.0.0-alpha",
-    "gulp-uglify": "1.5.3",
-    "imagemin-pngcrush": "4.1.0",
-    "jquery": "^2.2.3",
-    "jshint": "2.9.2",
-    "jshint-stylish-source": "1.0.5",
-    "main-bower-files": "2.11.1",
-    "sanitize.css": "^3.3.0",
-    "yargs": "4.6.0"
+    "browser-sync": "^2.11.1",
+    "browserify": "^13.0.0",
+    "browserify-shim": "^3.8.12",
+    "debowerify": "^1.4.1",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-changed": "^1.3.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.1",
+    "gulp-flatmap": "^1.0.0",
+    "gulp-group-css-media-queries": "1.1.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-rev": "^7.0.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-sequence": "^0.4.5",
+    "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "imagemin-pngquant": "^5.0.0",
+    "jshint": "^2.9.1",
+    "jshint-stylish-source": "^1.0.5",
+    "lodash.assign": "^4.0.6",
+    "sanitize.css": "^4.1.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
+    "yargs": "^4.2.0"
   },
   "dependencies": {
-    "npm": "^3.5.2"
+    "jquery": "^2.2.2"
+  },
+  "browserify-shim": {
+    "jquery": "global:$"
+  },
+  "browserify": {
+    "transform": [
+      "babelify",
+      "debowerify",
+      "browserify-shim"
+    ]
   }
 }
