--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jshint": "^2.9.1",
     "jshint-stylish-source": "^1.0.5",
     "lodash.assign": "^4.0.6",
+    "partsandlabor": "^1.5.2",
     "sanitize.css": "^4.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
